Add APIs for partner transaction
